# Flying_Robot_Project

./: .gitmodules  README.md
Dynamics/Multirotor2D/: Cargo.toml
Dynamics/Multirotor2D/src/: main.rs  multirotor2d.rs
Dynamics/Multirotor2D/urdf/: Multirotor.urdf
Dynamics/Multirotor3D/: Cargo.toml  README.md
Dynamics/Multirotor3D/src/: main.rs  multirotor3d.rs  utils.rs
Dynamics/Multirotor3D_simple/: Cargo.toml  assignment1.md  output.txt  plot.py
Dynamics/Multirotor3D_simple/data/: output.csv
Dynamics/Multirotor3D_simple/src/: main.rs  multirotor3d.rs  utils.rs  vis.rs
Estimator_MEKF/StateEstimation_MEKF/: Cargo.toml  output.txt  plot.py
Estimator_MEKF/StateEstimation_MEKF/data/: groundtruth.txt  output.txt
Estimator_MEKF/StateEstimation_MEKF/src/: kalman_core.rs  main.rs  (+3 more)
Estimator_MEKF/app_hello_rs_estimator/: .built-in.o.cmd  Makefile  README.md  app-config  build.rs
Geometric_Controller/: autonomous_sequence_high_level.py  crazyflie-firmware
Geometric_Controller/Multirotor3D_Controller/: Cargo.toml  assignment2.md  figure8-2024-12-05_22.50.16.mkv  output.txt  plot.py
Geometric_Controller/app_hello_rs_math/: .built-in.o.cmd  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
Geometric_Controller/app_hello_rs_math/include/: stabilizer_types.h
Geometric_Controller/app_hello_rs_math/src/: lib.rs  math.rs  myController_lee.rs  stabilizer_types.rs
Motion_Planning/MP_Diff_Flat/: Cargo.toml  assignment4.md  output.txt  plot.py
Motion_Planning/MP_Splines/: aggressive_traj.csv  cubicspline2d.py  spline8.py  trajectory_generation_2.py
(+24 files in other folders)
