#![no_std]

[package]
name = "cfapprs"
version = "0.1.0"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
panic-halt = "1.0.0"
libm = "0.2"
cty = "0.2"

[build-dependencies]
bindgen = "0.65.1"

[features]
default = ["std"]
std = []


